# malatesta

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  make_deb
debian/: changelog  control
etc/: Makefile.am
etc/logrotate.d/: malatesta
include/: Makefile.am
include/malatesta/: app.h  config.h  controls.h  exclusions.h  filters.h  inotify.h  malatesta.h  watches.h
src/: CMakeLists.txt  Makefile.am  app.cpp  controls.cpp  exclusions.cpp  filters.cpp  inotify.cpp  main.cpp  malatesta  plugin.cpp  watches.cpp
